# CSB51

./: .gitignore  README.md  pyproject.toml
01 - Escolha do tema/: README.md
02 - Analise exploratoria/: Analise de features mais importantes.ipynb  Analise.ipynb  Análises básicas.ipynb  LDA.ipynb  Pré-processamento.ipynb  TODO.ipynb  analise_exploratoria_covid_19_dataset_brasil_io.ipynb  analise_exploratoria_google_mobility.ipynb  eda.ipynb  teste.ows
02 - Analise exploratoria/.ipynb_checkpoints/: Analise de features mais importantes-checkpoint.ipynb  Análises básicas 2017_politico-checkpoint.ipynb  Análises básicas-checkpoint.ipynb  LDA-checkpoint.ipynb  Pré-processamento-checkpoint.ipynb  TODO-checkpoint.ipynb  eda-checkpoint.ipynb
02 - Analise exploratoria/src/: IDB-Data-Explore.ipynb  utils.py
04 - Pesquisa/: LDA.ipynb  LDA_4.ipynb  LDA_5.ipynb  processed_data.csv  treat_docs.ipynb
04 - Pesquisa/.ipynb_checkpoints/: LDA-checkpoint.ipynb  LDA_4-checkpoint.ipynb  LDA_5-checkpoint.ipynb  treat_docs-checkpoint.ipynb
04 - Pesquisa/tot/: README.md  main_pnas.py  tot.py  visualize_pnas.py
04 - Pesquisa/tot/data/pnas/: allstopwords.csv  alltimes.csv  alltitles.csv
04 - Pesquisa/tot/results/pnas_tot/: Visualization.ipynb  pnas_tot_topic_shapes.csv  pnas_tot_topic_vectors.csv
04 - Pesquisa/tot/results/pnas_tot/10_topic_10_it/: pnas_tot_topic_mixtures.csv  pnas_tot_topic_shapes.csv
04 - Pesquisa/tot/results/pnas_tot/5_topic_10_it/: pnas_tot_topic_mixtures.csv
05 - Resultados finais/: covid19_vs_clima_brasil.ipynb
(+2 files in other folders)
