[tool.poetry]
name = "csb-51"
version = "0.1.0"
description = ""
authors = ["Waine Oliveira Jr <waine.oliveira.jr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
seaborn = "^0.11.2"
ipykernel = "^6.4.2"
cufflinks = "^0.17.3"
textblob = "^0.17.1"
nltk = "^3.6.5"
wordcloud = "^1.8.1"
sklearn = "^0.0"
black = {extras = ["jupyter"], version = "^21.9b0"}
isort = "^5.9.3"
nbqa = "^1.1.1"
pyLDAvis = "^3.3.1"
spacy = "^3.1.3"
gensim = "^4.1.2"
mypy = "^0.910"
matplotlib = "^3.4.3"
stopwordsiso = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
